fix: add background image to resource files

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -42,6 +42,9 @@
       <fontweight>ExtraBold</fontweight>
      </font>
     </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
     <property name="text">
      <string>condottiere</string>
     </property>
