--- a/initplayerswindow.ui
+++ b/initplayerswindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>GameWindow</class>
- <widget class="QMainWindow" name="GameWindow">
+ <class>InitPlayersWindow</class>
+ <widget class="QMainWindow" name="InitPlayersWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Game</string>
+   <string>Initialize Players</string>
   </property>
   <widget class="QWidget" name="centralwidget"/>
  </widget>
