--- a/initplayerswindow.ui
+++ b/initplayerswindow.ui
@@ -20,8 +20,8 @@
    <widget class="QTableView" name="tblPlayer1">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>40</y>
+      <x>80</x>
+      <y>30</y>
       <width>691</width>
       <height>111</height>
      </rect>
@@ -36,8 +36,8 @@
    <widget class="QTableView" name="tableView_2">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>170</y>
+      <x>80</x>
+      <y>160</y>
       <width>691</width>
       <height>111</height>
      </rect>
@@ -46,8 +46,8 @@
    <widget class="QTableView" name="tableView_3">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>300</y>
+      <x>80</x>
+      <y>290</y>
       <width>691</width>
       <height>111</height>
      </rect>
@@ -56,8 +56,8 @@
    <widget class="QTableView" name="tableView_4">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>430</y>
+      <x>80</x>
+      <y>420</y>
       <width>691</width>
       <height>111</height>
      </rect>
@@ -66,8 +66,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>70</y>
+      <x>110</x>
+      <y>60</y>
       <width>101</width>
       <height>51</height>
      </rect>
@@ -86,8 +86,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>200</y>
+      <x>110</x>
+      <y>190</y>
       <width>101</width>
       <height>51</height>
      </rect>
@@ -106,8 +106,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>330</y>
+      <x>110</x>
+      <y>320</y>
       <width>101</width>
       <height>51</height>
      </rect>
@@ -126,8 +126,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>470</y>
+      <x>110</x>
+      <y>460</y>
       <width>101</width>
       <height>51</height>
      </rect>
@@ -143,41 +143,41 @@
      <string>Name :</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="txtPlayer1Name">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>70</y>
+      <x>230</x>
+      <y>60</y>
       <width>271</width>
       <height>51</height>
      </rect>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_2">
+   <widget class="QLineEdit" name="txtPlayer2Name">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>210</y>
+      <x>230</x>
+      <y>200</y>
       <width>271</width>
       <height>51</height>
      </rect>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_3">
+   <widget class="QLineEdit" name="txtPlayer3Name">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>340</y>
+      <x>230</x>
+      <y>330</y>
       <width>271</width>
       <height>51</height>
      </rect>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_4">
+   <widget class="QLineEdit" name="txtPlayer4Name">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>470</y>
+      <x>230</x>
+      <y>460</y>
       <width>271</width>
       <height>51</height>
      </rect>
@@ -186,8 +186,8 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>640</x>
-      <y>70</y>
+      <x>560</x>
+      <y>60</y>
       <width>71</width>
       <height>51</height>
      </rect>
@@ -206,8 +206,8 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>640</x>
-      <y>210</y>
+      <x>560</x>
+      <y>200</y>
       <width>71</width>
       <height>51</height>
      </rect>
@@ -226,8 +226,8 @@
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>640</x>
-      <y>340</y>
+      <x>560</x>
+      <y>330</y>
       <width>71</width>
       <height>51</height>
      </rect>
@@ -246,8 +246,8 @@
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>650</x>
-      <y>470</y>
+      <x>560</x>
+      <y>460</y>
       <width>71</width>
       <height>51</height>
      </rect>
@@ -263,44 +263,74 @@
      <string>Age : </string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_5">
+   <widget class="QPushButton" name="btnNext">
     <property name="geometry">
      <rect>
-      <x>730</x>
-      <y>70</y>
-      <width>61</width>
+      <x>840</x>
+      <y>480</y>
+      <width>111</width>
       <height>51</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Next</string>
+    </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_6">
+   <widget class="QSpinBox" name="numPlayer1Age">
     <property name="geometry">
      <rect>
-      <x>730</x>
-      <y>210</y>
-      <width>61</width>
+      <x>640</x>
+      <y>60</y>
+      <width>71</width>
       <height>51</height>
      </rect>
     </property>
+    <property name="minimum">
+     <number>6</number>
+    </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_7">
+   <widget class="QSpinBox" name="numPlayer3Age">
     <property name="geometry">
      <rect>
-      <x>730</x>
-      <y>340</y>
-      <width>61</width>
+      <x>640</x>
+      <y>330</y>
+      <width>71</width>
       <height>51</height>
      </rect>
     </property>
+    <property name="minimum">
+     <number>6</number>
+    </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_8">
+   <widget class="QSpinBox" name="numPlayer4Age">
     <property name="geometry">
      <rect>
-      <x>730</x>
-      <y>470</y>
-      <width>61</width>
+      <x>640</x>
+      <y>460</y>
+      <width>71</width>
       <height>51</height>
      </rect>
+    </property>
+    <property name="minimum">
+     <number>6</number>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="numPlayer2Age">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>200</y>
+      <width>71</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>6</number>
     </property>
    </widget>
   </widget>
